add header and edit private and public routes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,4 +34,18 @@ a {
 }
 
 
+.settingsModal {
+  transition: all .3s ease;
+  animation: settingsModalAnim .3s ease ;
+}
+
+
+@keyframes settingsModalAnim  {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 
